Apply mvn formatter (#836)
Google style is applied with mvn formatter:format

Signed-off-by: tesshucom <webmaster@tesshu.com>