@@ -70,11 +70,8 @@ public class LegacyHsqlUtil {
     /**
      * Check if a HSQLDB database upgrade will occur and backups are needed.
      *
-     * DB   Driver      Likely reason                                Decision
-     * null -           new db or non-legacy                         false
-     * -    null or !2  something went wrong, we better make copies  true
-     * 1.x  2.x         this is the big upgrade                      true
-     * 2.x  2.x         already up to date                           false
+     * DB Driver Likely reason Decision null - new db or non-legacy false - null or !2 something went wrong, we better
+     * make copies true 1.x 2.x this is the big upgrade true 2.x 2.x already up to date false
      *
      * @return true if a database backup/migration should be performed
      */
@@ -91,23 +88,21 @@ public class LegacyHsqlUtil {
         // Check the database driver version
         String driverVersion;
         try {
-            Driver driver =
-                    (Driver) Class.forName("org.hsqldb.jdbc.JDBCDriver", true, Thread.currentThread().getContextClassLoader())
-                    .getDeclaredConstructor()
-                    .newInstance();
+            Driver driver = (Driver) Class
+                    .forName("org.hsqldb.jdbc.JDBCDriver", true, Thread.currentThread().getContextClassLoader())
+                    .getDeclaredConstructor().newInstance();
             driverVersion = String.format("%d.%d", driver.getMajorVersion(), driver.getMinorVersion());
             if (driver.getMajorVersion() != AirsonicHsqlDatabase.CURRENT_SUPPORTED_MAJOR_VERSION) {
-                LOG.warn("HSQLDB database driver version {} is untested ; trying to connect anyway, this may upgrade the database from version {}", driverVersion, currentVersion);
+                LOG.warn(
+                        "HSQLDB database driver version {} is untested ; trying to connect anyway, this may upgrade the database from version {}",
+                        driverVersion, currentVersion);
                 return true;
             }
-        } catch (InstantiationException
-                | IllegalAccessException
-                | IllegalArgumentException
-                | InvocationTargetException
-                | NoSuchMethodException
-                | SecurityException
-                | ClassNotFoundException e) {
-            LOG.warn("HSQLDB database driver version cannot be determined ; trying to connect anyway, this may upgrade the database from version {}", currentVersion, e);
+        } catch (InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException
+                | NoSuchMethodException | SecurityException | ClassNotFoundException e) {
+            LOG.warn(
+                    "HSQLDB database driver version cannot be determined ; trying to connect anyway, this may upgrade the database from version {}",
+                    currentVersion, e);
             return true;
         }
 
@@ -121,11 +116,13 @@ public class LegacyHsqlUtil {
         } else if (currentVersion.startsWith("2.")) {
             // If the database version is 2.x but older than the driver, the upgrade should be relatively painless.
             if (LOG.isDebugEnabled()) {
-                LOG.debug("HSQLDB database will be silently upgraded from version {} to {}", currentVersion, driverVersion);
+                LOG.debug("HSQLDB database will be silently upgraded from version {} to {}", currentVersion,
+                        driverVersion);
             }
             return false;
         } else if (UPGRADE_NEEDED_VERSION1.equals(currentVersion) || UPGRADE_NEEDED_VERSION2.equals(currentVersion)) {
-            // If we're on a 1.8.0 or 1.8.1 database and upgrading to 2.x, we're going to handle this manually and check what we're doing.
+            // If we're on a 1.8.0 or 1.8.1 database and upgrading to 2.x, we're going to handle this manually and check
+            // what we're doing.
             if (LOG.isInfoEnabled()) {
                 LOG.info("HSQLDB database upgrade needed, from version {} to {}", currentVersion, driverVersion);
             }
@@ -139,6 +136,7 @@ public class LegacyHsqlUtil {
 
     /**
      * Perform a backup of the HSQLDB database, to a timestamped directory.
+     * 
      * @return the path to the backup directory
      */
     public static Path performHsqldbDatabaseBackup() throws IOException {
@@ -154,8 +152,7 @@ public class LegacyHsqlUtil {
         }
 
         String timestamp = DateTimeFormatter.ofPattern("yyyyMMddHHmmss").format(LocalDateTime.now());
-        Path destination = source
-                .resolveSibling(String.format("%s.backup.%s", fileName, timestamp));
+        Path destination = source.resolveSibling(String.format("%s.backup.%s", fileName, timestamp));
 
         if (LOG.isDebugEnabled()) {
             LOG.debug("Performing HSQLDB database backup...");
@@ -227,7 +224,8 @@ public class LegacyHsqlUtil {
         // prevent further connections to the database.
         try (Connection conn = getHsqldbDatabaseConnection()) {
             if (LOG.isDebugEnabled()) {
-                LOG.debug("Database connection established. Current version is: {}", conn.getMetaData().getDatabaseProductVersion());
+                LOG.debug("Database connection established. Current version is: {}",
+                        conn.getMetaData().getDatabaseProductVersion());
             }
             // On upgrade, the official documentation recommends that we
             // run 'SHUTDOWN SCRIPT' to compact all the database into a
@@ -253,7 +251,7 @@ public class LegacyHsqlUtil {
      */
     public static void upgradeHsqldbDatabaseSafely() {
         if (LegacyHsqlUtil.isHsqldbDatabaseUpgradeNeeded()) {
-            
+
             Path backupDir;
             try {
                 backupDir = performHsqldbDatabaseBackup();
@@ -264,7 +262,8 @@ public class LegacyHsqlUtil {
                 try {
                     performAdditionOfScript(backupDir);
                 } catch (Exception e) {
-                    throw new CompletionException("Script verification/addition of HSQLDB database failed before upgrade", e);
+                    throw new CompletionException(
+                            "Script verification/addition of HSQLDB database failed before upgrade", e);
                 }
             }
             try {
